--- a/2-fundamentos-web/html/ejercicio-2/ejercicio.html
+++ b/2-fundamentos-web/html/ejercicio-2/ejercicio.html
@@ -17,7 +17,7 @@
         <ul>
             <li>
                 <!-- Completa la navegación -->
-                <a href="#">Acerca de</a>
+                <a href="acerca.html">Acerca de</a>
             </li>
         </ul>
     </nav>
@@ -28,10 +28,26 @@
         <form>
             <label for="nombre">Nombre:</label>
             <input type="text" id="nombre" name="nombre" required>
-        
+            <br>
             <label for="apellido">Apellido:</label>
             <input type="text" id="apellido" name="apellido" required>
+            <br>
+            <label for="email">Correo Electronico:</label>
+            <input type="email" id="email" name="email" required>
+            <br>
+            <label for="password">Contraseña:</label>
+            <input type="password" id="password" name="password" required>
+            <br>
+            <label for="date">Fecha de Nacimiento:</label>
+            <input type="date" id="date" name="date" required>
+            <br>
+            <label for="tel">Telefono:</label>
+            <input type="tel" id="tel" name="tel" required>
+            <br>
+            <label for="direccion">Dirección:</label>
+            <textarea name="direccion" id="direccion"></textarea>
 
+            <button for="registrar" id="registrar">Registrar</button>
             <!-- Agrega los inputs faltantes -->
         </form>
     </main>
