--- a/3-javascript/5-dom/ejercicio.html
+++ b/3-javascript/5-dom/ejercicio.html
@@ -38,9 +38,31 @@
         const tituloEncabezado = document.getElementById('encabezado')
         const inputEncabezado = document.getElementById('inputEncabezado')
 
+        let titulosAnteriores = []; 
+
         function modificarEncabezado() {
-            /* Tu código aquí */
+            const nuevoTitulo = inputEncabezado.value.trim(); 
+            
+            if (nuevoTitulo !== '') { 
+                titulosAnteriores.push(tituloEncabezado.innerText);
+                tituloEncabezado.innerText = nuevoTitulo; 
+                inputEncabezado.value = ''; 
+                
+                if (titulosAnteriores.length >= 2) { 
+                    btnUndo.disabled = false;
+                }
+            } else {
+                alert('El valor del encabezado no puede ser vacío.');
+            }
         }
+
+        btnUndo.addEventListener('click', function() {
+            tituloEncabezado.innerText = titulosAnteriores.pop();
+
+            if (titulosAnteriores.length === 0) {
+                btnUndo.disabled = true;
+            }
+        });
     </script>
 </body>
 
